<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <data>
        <variable
            name="soundboardViewModel"
            type="com.perozzi_package.soundboardbuddy.ui.soundboard.SoundboardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.soundboard.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appLogoConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/appLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/soundboard_buddy_app_logo"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/text_logo_take_1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recyclerViewConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="16dp"
            app:layout_constraintBottom_toTopOf="@+id/menuLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appLogoConstraintLayout">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/volumeAdjustmentText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/volumeAdjustmentBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/volumeAdjustmentText" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/SoundboardTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="25sp"
                android:gravity="center"
                android:text="@string/your_saved_sounds"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/volumeAdjustmentBar" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/soundboardRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/SoundboardTitle"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingAddButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/floating_action_button"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="@+id/soundboardRecyclerView"
                app:layout_constraintEnd_toEndOf="@+id/soundboardRecyclerView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menuLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/navigationMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FF7144"
                app:itemIconTint="@color/black"
                app:itemTextColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:menu="@menu/menu" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>